--- a/BlazingTrails.Api/BlazingTrails.Api.csproj
+++ b/BlazingTrails.Api/BlazingTrails.Api.csproj
@@ -4,11 +4,13 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>8938f059-496b-41a5-b03f-b7d9f9ffe4aa</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
 	<PackageReference Include="Ardalis.ApiEndpoints" Version="3.1.0" />
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.9" />
 	<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" PrivateAssets="all" Version="6.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0" />
