--- a/BlazingTrails.Api/appsettings.json
+++ b/BlazingTrails.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Auth0": {
+    "Authority": "https://dev-rnscu23wpo0xsom3.us.auth0.com",
+    "ApiIdentifier": "https://blazingtrailsapi.com"
+  },
   "AllowedHosts": "*"
 }
