--- a/BlazingTrails.Client/BlazingTrails.Client.csproj
+++ b/BlazingTrails.Client/BlazingTrails.Client.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.FluentValidation" Version="2.1.0" />
+	<PackageReference Include="Blazored.LocalStorage" Version="4.1.2" />
 	<PackageReference Include="MediatR" Version="9.0.0" />
 	<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
 	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
@@ -22,8 +23,8 @@
 
   <ItemGroup>
     <Watch Include="**/*.scss" />
-    <Watch Remove="Features\Home\HomePage.razor.scss" />
     <Watch Remove="Features\ManageTrails\Shared\InputRouteMap.razor.scss" />
+    <Watch Remove="Features\Shared\NoTrails.razor.scss" />
     <None Update="**/*.css" Watch="false" />
   </ItemGroup>
 
